--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
             <div class="footer-links">
                 <h4>Shop</h4>
                 <ul>
-                    <li><a href="shop.html">Products</a></li>
+                    <li><a href="./shop.html">Products</a></li>
                     <li><a href="../index.html#face-map">Face Map</a></li>
-                    <li><a href="shop.html">Ingredients</a></li>
-                    <li><a href="shop.html">Routine</a></li>
+                    <li><a href="./pages/ingredients.html">Ingredients</a></li>
+                    <!--<li><a href="shop.html">Routine</a></li>-->
                 </ul>
             </div>
 
@@ -223,7 +223,6 @@
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Guides</a></li>
                     <li><a href="#">FAQ</a></li>
-                    <li><a href="about.html">About</a></li>
                 </ul>
             </div>
 
@@ -231,7 +230,7 @@
                 <h4>Company</h4>
                 <ul>
                     <li><a href="#team-section">Meet the Team</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="./about.html">About Us</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
