--- a/pages/shop.html
+++ b/pages/shop.html
@@ -30,14 +30,26 @@
 
     <!-- Shop Page -->
     <main class="shop-page">
+        <!-- Shop Header -->
         <div class="shop-header">
             <h1>Shop Skincare</h1>
-            <div class="search-bar">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <circle cx="11" cy="11" r="8"></circle>
-                    <path d="M21 21l-4.35-4.35"></path>
-                </svg>
-                <input type="text" id="shopSearch" placeholder="Search products, brands, categories...">
+            <div class="header-actions">
+                <div class="search-bar">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <circle cx="11" cy="11" r="8"></circle>
+                        <path d="M21 21l-4.35-4.35"></path>
+                    </svg>
+                    <input type="text" id="shopSearch" placeholder="Search products, brands, categories...">
+                </div>
+                <button class="cart-icon-btn" id="cartIconBtn" onclick="openCart()">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M6 6h15l-1.5 9h-12z" />
+                        <circle cx="9" cy="20" r="1.5" />
+                        <circle cx="18" cy="20" r="1.5" />
+                        <path d="M6 6L5 3H2" />
+                    </svg>
+                    <span class="cart-badge" id="cartBadge">0</span>
+                </button>
             </div>
         </div>
 
@@ -168,10 +180,10 @@
             <div class="footer-links">
                 <h4>Shop</h4>
                 <ul>
-                    <li><a href="shop.html">Products</a></li>
+                    <li><a href="./shop.html">Products</a></li>
                     <li><a href="../index.html#face-map">Face Map</a></li>
-                    <li><a href="shop.html">Ingredients</a></li>
-                    <li><a href="shop.html">Routine</a></li>
+                    <li><a href="./ingredients.html">Ingredients</a></li>
+                    <!--<li><a href="shop.html">Routine</a></li>-->
                 </ul>
             </div>
 
@@ -181,7 +193,6 @@
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Guides</a></li>
                     <li><a href="#">FAQ</a></li>
-                    <li><a href="about.html">About</a></li>
                 </ul>
             </div>
 
@@ -189,7 +200,7 @@
                 <h4>Company</h4>
                 <ul>
                     <li><a href="#team-section">Meet the Team</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="./about.html">About Us</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
@@ -219,6 +230,25 @@
             <p class="copyright">© 2026 FaceAtlas. All rights reserved.</p>
         </div>
     </footer>
+
+    <!-- Cart Side Panel -->
+    <div class="cart-overlay" id="cartOverlay" onclick="closeCart()"></div>
+    <div class="cart-panel" id="cartPanel">
+        <div class="cart-header">
+            <h3>Your Cart</h3>
+            <button class="close-cart" onclick="closeCart()">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M18 6L6 18M6 6l12 12" />
+                </svg>
+            </button>
+        </div>
+        <div class="cart-content" id="cartContent">
+            <!-- Cart items rendered here -->
+        </div>
+        <div class="cart-footer" id="cartFooter">
+            <!-- Checkout section -->
+        </div>
+    </div>
 
     <script src="../js/main.js"></script>
 </body>
