--- a/pages/ingredients.html
+++ b/pages/ingredients.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FaceAtlas</title>
-
+    <title>Ingredients - FaceAtlas</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@700;800&family=Space+Mono:wght@400&display=swap"
         rel="stylesheet">
@@ -19,7 +18,7 @@
         <div class="nav-links">
             <a href="../index.html">Home</a>
             <a href="shop.html">Shop</a>
-            <a href="about.html" class="active">About Us</a>
+            <a href="about.html">About Us</a>
         </div>
         <div class="user-icon">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -29,77 +28,57 @@
         </div>
     </nav>
 
-    <!-- About Page -->
-    <main class="about-page">
-        <div class="about-hero">
-            <h1>About FaceAtlas</h1>
-            <p>We're on a mission to make skincare simple, science-backed, and accessible to everyone. No more guessing
-                games—just clear, personalized guidance for your unique skin.</p>
-        </div>
+    <!-- Ingredients Page -->
+    <main class="ingredients-page">
+        <div class="ingredients-hero">
+            <h1>Ingredient Library</h1>
+            <p>Understand what goes on your skin. Science-backed breakdowns of the most effective skincare ingredients.
+            </p>
 
-        <div class="about-grid">
-            <div class="about-card">
-                <div class="about-card-icon">
-                    <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
-                    </svg>
-                </div>
-                <h3>Science-Backed</h3>
-                <p>Every product and recommendation is based on dermatological research and proven ingredients.</p>
-            </div>
-
-            <div class="about-card">
-                <div class="about-card-icon">
-                    <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path
-                            d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
-                        </path>
-                    </svg>
-                </div>
-                <h3>Personalized Care</h3>
-                <p>Our interactive face map helps you understand your skin's unique needs and problem areas.</p>
-            </div>
-
-            <div class="about-card">
-                <div class="about-card-icon">
-                    <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-                        <circle cx="9" cy="7" r="4"></circle>
-                        <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
-                        <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
-                    </svg>
-                </div>
-                <h3>Community Driven</h3>
-                <p>Real reviews and experiences from our community help you make informed decisions.</p>
+            <div class="ingredient-search">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <circle cx="11" cy="11" r="8"></circle>
+                    <path d="M21 21l-4.35-4.35"></path>
+                </svg>
+                <input type="text" id="ingredientSearch" placeholder="Search ingredients...">
             </div>
         </div>
 
-        <div class="team-section" id="team-section">
-            <h2>Meet Our Team</h2>
-            <div class="team-grid">
-                <div class="team-member">
-                    <div class="team-member-avatar">C</div>
-                    <h4>Charisma Abbey P. Averion</h4>
+        <div class="ingredients-layout">
+            <!-- Category Filters -->
+            <aside class="ingredients-sidebar">
+                <div class="filter-group">
+                    <h3>Category</h3>
+                    <button class="category-btn active" data-category="all">All Ingredients</button>
+                    <button class="category-btn" data-category="exfoliants">Exfoliants</button>
+                    <button class="category-btn" data-category="hydrators">Hydrators</button>
+                    <button class="category-btn" data-category="antioxidants">Antioxidants</button>
+                    <button class="category-btn" data-category="retinoids">Retinoids</button>
+                    <button class="category-btn" data-category="acne-fighting">Acne-Fighting</button>
+                    <button class="category-btn" data-category="soothing">Soothing</button>
+                    <button class="category-btn" data-category="brightening">Brightening</button>
                 </div>
-                <div class="team-member">
-                    <div class="team-member-avatar">S</div>
-                    <h4>Sophia Rynelle Anne B. Peduca</h4>
+
+                <div class="ingredient-fact">
+                    <h4>Did you know?</h4>
+                    <p id="ingredientFact">Vitamin C is most effective when stored in dark, airtight containers as it
+                        oxidizes quickly when exposed to light and air.</p>
                 </div>
-                <div class="team-member">
-                    <div class="team-member-avatar">P</div>
-                    <h4>Paul Joel D. Perez</h4>
-                </div>
-                <div class="team-member">
-                    <div class="team-member-avatar">N</div>
-                    <h4>Naiomi V. Tarayo</h4>
-                </div>
-                <div class="team-member">
-                    <div class="team-member-avatar">D</div>
-                    <h4>Dwane Valencia</h4>
-                </div>
+            </aside>
+
+            <!-- Ingredients Grid -->
+            <div class="ingredients-grid" id="ingredientsGrid">
+                <!-- Ingredients rendered by JavaScript -->
             </div>
         </div>
     </main>
+
+    <!-- Ingredient Detail Modal -->
+    <div class="modal-overlay" id="ingredientModalOverlay">
+        <div class="ingredient-modal" id="ingredientModalContent">
+            <!-- Content populated by JavaScript -->
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer>
@@ -164,6 +143,7 @@
     </footer>
 
     <script src="../js/main.js"></script>
+    <script src="../js/ingredient.js"></script>
 </body>
 
 </html>
